Replace new uRL with URI.create